--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Django bazdmeg Django</h1>
+    <h1>Hello Django bazdmeg Django, ezt mostmár gépről írom</h1>
 
 </body>
 </html>
